# StdUtils

./: CMakeLists.txt  README.md
include/: alloc.h  array.h  cstring.h  errorf.h  iostream.h  stdutil.h
src/: alloc.c  cstring.c  errorf.c
